# prefect_mldump

./: README.md  docker-compose.yaml  pyproject.toml
main/: Dockerfile  pyproject.toml  start_prefect.sh  start_workers.sh
main/backend/: rest.py
main/orchestrator/: api_tool.py  orchestration.py  orchestration_tools.py  work_pool.py
orchestrator/: orchestration.py  orchestration_tools.py
