[project]
name = "prefect-mldump"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pandas>=2.3.1",
    "prefect>=3.4.11",
    "psycopg2-binary>=2.9.10",
    "uvicorn>=0.35.0",
]
